--- a/landingPage.html
+++ b/landingPage.html
@@ -3,13 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <title>Cães & Gatos</title>
-    <link rel="stylesheet" href="C:\Users\Thiago\Desktop\Clinica\CSS\landingPage.css">
+    <link rel="stylesheet" href="CSS/landingPage.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
 
+<nav class="navbar navbar-default navbar-fixed-top">
 
-<h1>Clinica Cães & Gatos</h1>
+    <div class="container">
+
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-nav-hamburguer" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+
+            <a class="navbar-brand" href="#">Clínica Cães & Gatos</a>
+        </div>
+
+        <div class="collapse navbar-collapse" id="bs-nav-hamburguer">
+            <ul class="nav navbar-nav">
+                <li><a href="#">Sobre Nós</a> </li>
+            </ul>
+
+            <div id="direita">
+
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#"><i class="fa fa-sign-in" aria-hidden="true"></i> Área de Clientes</a> </li>
+                    <li><a href="#"><i class="fa fa-sign-in" aria-hidden="true"></i> Área de Funcionários</a> </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+</nav>
+
+<div class="container">
+
+    <div class="jumbotron">
+
+        <h1>Clínica Cães & Gatos</h1>
+    </div>
+</div>
+
+<script src="http://code.jquery.com/jquery-3.1.1.js"
+        integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 </html>
