--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 </head>
 <body>
 
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "//connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v2.8";
+    fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
 <nav class="navbar navbar-default navbar-fixed-top">
 
     <div class="container">
@@ -28,6 +37,16 @@
         <div class="collapse navbar-collapse" id="bs-nav-hamburguer">
             <ul class="nav navbar-nav">
                 <li><a href="#">Sobre Nós</a> </li>
+                <li><a href="#">Nossos Parceiros</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                       aria-haspopup="true" aria-expanded="false">Especialidades <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Especialidade 1</a></li>
+                        <li><a href="#">Especialidade 2</a></li>
+                        <li><a href="#">Especialidade 3</a></li>
+                    </ul>
+                </li>
             </ul>
 
             <div id="direita">
@@ -42,11 +61,34 @@
 
 </nav>
 
-<div class="container">
+<div class="container body">
 
     <div class="jumbotron">
 
-        <h1>Clínica Cães & Gatos</h1>
+        <h1><img src="logo.jpg" class="logo">  Clínica Cães & Gatos</h1>
+    </div>
+
+    <div class="row">
+
+        <div class="col-lg-12">
+
+            <div id="parceiros">
+
+
+                <a href="http://google.com" class="parceiros"><img id="parceirosImg" src="https://hd.unsplash.com/photo-1450778869180-41d0601e046e">Nossos parceiros</a>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+
+        <div class="col-md-3">
+
+            <div class="fb-page" data-href="https://www.facebook.com/Cl%C3%ADnica-Veterin%C3%A1ria-C%C3%A3es-e-Gatos-271674326187553/?fref=ts"
+             data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote
+             cite="https://www.facebook.com/Cl%C3%ADnica-Veterin%C3%A1ria-C%C3%A3es-e-Gatos-271674326187553/?fref=ts"
+             class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/Cl%C3%ADnica-Veterin%C3%A1ria-C%C3%A3es-e-Gatos-271674326187553/?fref=ts">
+             Clínica Veterinária Cães e Gatos</a></blockquote></div>
+        </div>
     </div>
 </div>
 
